Use URI class in `serverOnly` method